Change the method of settings initialization